# proxbox

./: Cargo.toml  makefile
aliases/: common.sh  rust.sh
install/: debian.sh
misc/: auto_login.sh  awesome_bash.sh  rust.sh
scripts/: auto_login.sh  debian.sh  mvp.sh  rust.sh  starship.sh
scripts/shells/: install_fish.sh  install_nushell.sh  install_zsh.sh
src/: container.rs  impls.rs  lib.rs  main.rs  scripts.rs  utils.rs
